K8S/websockets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwebsockets
  labels:
    app: cloudwebsockets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwebsockets
  template:
    metadata:
      labels:
        app: cloudwebsockets
    spec:
      containers:
      - name: cloudwebsockets
        image: cloudwebsockets
        imagePullPolicy: Never
        ports:
        - containerPort: 3001

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: cloudwebsockets
spec:
  type: ClusterIP
  selector:
    app: cloudwebsockets
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
